tests/snapshots/yaml_suite_snapshots__yaml_suite_9U5K_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 2.12. Compact Nested Mapping
  from: "http://www.yaml.org/spec/1.2/spec.html#id2760821"
  tags: spec mapping sequence
  yaml: "---\n# Products purchased\n- item    : Super Hoop\n  quantity: 1\n- item    : Basketball\n  quantity: 4\n- item    : Big Shoes\n  quantity: 1\n"
  tree: "+STR\n +DOC ---\n  +SEQ\n   +MAP\n    =VAL :item\n    =VAL :Super Hoop\n    =VAL :quantity\n    =VAL :1\n   -MAP\n   +MAP\n    =VAL :item\n    =VAL :Basketball\n    =VAL :quantity\n    =VAL :4\n   -MAP\n   +MAP\n    =VAL :item\n    =VAL :Big Shoes\n    =VAL :quantity\n    =VAL :1\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  {\n    \"item\": \"Super Hoop\",\n    \"quantity\": 1\n  },\n  {\n    \"item\": \"Basketball\",\n    \"quantity\": 4\n  },\n  {\n    \"item\": \"Big Shoes\",\n    \"quantity\": 1\n  }\n]\n"
  dump: "---\n- item: Super Hoop\n  quantity: 1\n- item: Basketball\n  quantity: 4\n- item: Big Shoes\n  quantity: 1\n"
