tests/snapshots/yaml_suite_snapshots__yaml_suite_9U5K_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 2.12. Compact Nested Mapping
  from: "http://www.yaml.org/spec/1.2/spec.html#id2760821"
  tags: spec mapping sequence
  yaml: "---\n# Products purchased\n- item    : Super Hoop\n  quantity: 1\n- item    : Basketball\n  quanti…"
  tree: "+STR\n +DOC ---\n  +SEQ\n   +MAP\n    =VAL :item\n    =VAL :Super Hoop\n    =VAL :quantity\n    =VA…"
  json: "[\n  {\n    \"item\": \"Super Hoop\",\n    \"quantity\": 1\n  },\n  {\n    \"item\": \"Basketball\",\n    \"qu…"
  dump: "---\n- item: Super Hoop\n  quantity: 1\n- item: Basketball\n  quantity: 4\n- item: Big Shoes\n  qu…"
