tests/snapshots/yaml_suite_snapshots__yaml_suite_9WXW_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 6.18. Primary Tag Handle
  from: "http://www.yaml.org/spec/1.2/spec.html#id2782728"
  tags: local-tag spec directive tag unknown-tag 1.3-err
  yaml: "# Private\n!foo \"bar\"\n...\n# Global\n%TAG ! tag:example.com,2000:app/\n---\n!foo \"bar\"\n"
  tree: "+STR\n +DOC\n  =VAL <!foo> \"bar\n -DOC ...\n +DOC ---\n  =VAL <tag:example.com,2000:app/foo> \"bar\n -DOC\n-STR\n"
  json: "\"bar\"\n\"bar\"\n"
  dump: "!foo \"bar\"\n...\n--- !<tag:example.com,2000:app/foo> \"bar\"\n"
