tests/snapshots/yaml_suite_snapshots__yaml_suite_9YRD_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Multiline Scalar at Top Level
  from: NimYAML tests
  tags: scalar whitespace 1.3-err
  yaml: "a\nb␣␣\n  c\nd\n\ne\n"
  tree: "+STR\n +DOC\n  =VAL :a b c d\\ne\n -DOC\n-STR\n"
  json: "\"a b c d\\ne\"\n"
  dump: "'a b c d\n\n  e'\n"
