tests/snapshots/yaml_suite_snapshots__yaml_suite_9YRD_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "'a b c d\n\n  e'\n"
  from: NimYAML tests
  json: "\"a b c d\\ne\"\n"
  name: Multiline Scalar at Top Level
  tags: scalar whitespace 1.3-err
  tree: "+STR\n +DOC\n  =VAL :a b c d\\ne\n -DOC\n-STR\n"
  yaml: "a\nb␣␣\n  c\nd\n\ne\n"
